salesforce-analytics-cloud/3.11/modules/ROOT/pages/salesforce-analytics-connector-reference.adoc
= Salesforce Einstein Analytics Connector 3.11 Reference - Mule 4
:page-aliases: connectors::salesforce/salesforce-analytics-connector-reference.adoc



== Default Configuration

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | |x
| Connection a| * Basic Username and Password
* OAuth v2.0
* OAuth JWT
* OAuth 2.0 SAML Bearer
 | The connection types to provide to this configuration. | |x
| Expiration Policy a| ExpirationPolicy |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

== Connection Types

[[salesforce-analytics_basic]]
=== Basic Username and Password


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<Tls>> |  If the protocol is configured as HTTPS, then you must also configure the keystore configuration.   |  |
| Username a| String |  Username used to initialize the session. |  |x
| Password a| String |  Password used to authenticate the user. |  |x
| Security Token a| String |  User's security token. It can be omitted if your IP has been added to the allow list on Salesforce. |  |
| Authorization URL a| String |  Web service URL responsible for user authentication. This is the URL for the endpoint that is configured to handle SOAP authentication requests. |  There is no default value, but if left empty the connector uses the latest API version |
| Reconnection a| Reconnection |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Read Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer waits for a response before it times out. Default value is 0, which means infinite. |  0 |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit that qualifies the Read Timeout. | MILLISECONDS |
| Connection Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer attempts to establish a connection before it times out. Default value is 0, which means infinite. |  0 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit that qualifies the Connection Timeout. | MILLISECONDS |
| Host a| String |  Host name of the proxy. If this property is not set then no proxy is used, otherwise a proxy is used, but a proxy host must be specified. |  |
| Port a| Number |  Port of the proxy. If host is set then this property must be set and cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set then no authentication is used against the proxy, otherwise this value must be specified. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
|===

[[salesforce-analytics_config-with-oauth]]
=== OAuth v2.0

include::connectors::partial$oauth2-description.adoc[]

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Display a| Enumeration, one of:

** PAGE
** POPUP
** TOUCH |  | PAGE |
| Immediate a| Enumeration, one of:

** TRUE
** FALSE |  |  FALSE |
| Prompt a| Enumeration, one of:

** LOGIN
** CONSENT |  |  LOGIN |
| Reconnection a| Reconnection |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Read Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer waits for a response before it times out. Default value is 0, which means infinite. |  0 |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit that qualifies the Read Timeout. | MILLISECONDS |
| Connection Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer attempts to establish a connection before it times out. Default value is 0, which means infinite. |  0 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit that qualifies the Connection Timeout. | MILLISECONDS |
| Host a| String |  Host name of the proxy. If this property is not set, then no proxy is used, otherwise a proxy is used, and a proxy host must be specified. |  |
| Port a| Number |  Port of the proxy. If host is set, then this property must be set and cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set, then no authentication is used against the proxy, otherwise this value must be specified. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Consumer Key a| String |  The OAuth consumerKey as registered with the service provider. |  |x
| Consumer Secret a| String |  The OAuth consumerSecret as registered with the service provider. |  |x
| Authorization Url a| String |  The service provider's authorization endpoint URL. |  `+https://login.salesforce.com/services/oauth2/authorize+` |
| Access Token Url a| String |  The service provider's accessToken endpoint URL. |  `+https://login.salesforce.com/services/oauth2/token+` |
| Scopes a| String |  The OAuth scopes to request during the dance. If not provided, it defaults to those in the annotation. |  |
| Resource Owner Id a| String |  The resourceOwnerId that each component should use if it doesn't reference otherwise. |  |
| Before a| String |  The name of a flow to execute immediately before starting the OAuth dance. |  |
| After a| String |  The name of a flow to execute immediately after an accessToken is received. |  |
| Listener Config a| String |  A reference to a `+<http:listener-config />+` to use to create the listener that catches the access token callback endpoint. |  |x
| Callback Path a| String |  The path of the access token callback endpoint. |  |x
| Authorize Path a| String |  The path of the local HTTP endpoint that triggers the OAuth dance. |  |x
| External Callback Url a| String |  Specify the URL the OAuth provider should use to access the callback if the callback endpoint is behind a proxy or will be accessed through a non-direct URL. |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If not specified, the Mule automatically provisions the default object store. |  |
|===

[[salesforce-analytics_oauth-jwt]]
=== OAuth JWT


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<Tls>> |  If the protocol is configured as HTTPS, then you must also configure the keystore configuration. |  |
| Read Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer waits for a response before it times out. The default value is `0`, which means infinite. |  0 |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit that qualifies the Read Timeout. |  MILLISECONDS |
| Connection Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer attempts to establish a connection before it times out. The default value is `0`, which means infinite. |  0 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time Unit that qualifies the Connection Timeout. |  MILLISECONDS |
| Host a| String |  Host name of the proxy. Required if a proxy is used. If this property is not set, then no proxy is used.  |  |
| Port a| Number |  Port of the proxy. If a Host is set, this property must also be set, and cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. Required if using authentication against the proxy. If this property is not set, then no authentication is used against the proxy. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Consumer Key a| String |  Consumer key for the Salesforce-connected app. |  | *x*
| Key Store a| String |  Path to the keystore used to sign data during authentication. |  | *x*
| Store Password a| String | Password of the keystore. |  | *x*
| Principal a| String | Username of the Salesforce user on whose behalf to take action.  |  | *x*
| Token Endpoint a| String | URL pointing to the server responsible for providing the authentication token. According to Salesforce, this URL is `+https://login.salesforce.com/services/oauth2/token+`. If implementing for a community, the URL is `+https://acme.force.com/customers/services/oauth2/token+`, where `acme.force.com/customers` is your own community URL. |  `+https://login.salesforce.com/services/oauth2/token+` |
| Audience Url a| String | Identifies the authorization server as an intended audience. The authorization server must verify that it is an intended audience for the token.

Use the authorization server's URL for the audience value, for example: `+https://login.salesforce.com+`, `+https://test.salesforce.com+`, or `+https://community.force.com/customers=` if implementing for a community. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[salesforce-analytics_oauth-saml]]
=== OAuth 2.0 SAML Bearer


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| TLS configuration a| <<Tls>> |  If the protocol is configured as HTTPS, then you must also configure the keystore configuration. |  |
| Read Timeout a| Number |  Specifies the amount of time, in milliseconds, that the consumer waits for a response before it times out. The default value is `0`, which means infinite. |  0 |
| Read Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time Unit that qualifies the Read Timeout. | MILLISECONDS |
| Connection Timeout a| Number | Specifies the amount of time, in milliseconds, that the consumer attempts to establish a connection before it times out. The default value is `0`, which means infinite. | 0 |
| Connection Timeout Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time Unit that qualifies the Connection Timeout. |  MILLISECONDS |
| Host a| String |  Host name of the proxy. Required if a proxy is used. If this property is not set, then no proxy is used.  |  |
| Port a| Number |  Port of the proxy. If a Host is set, this property must also be set, and cannot be a negative number. |  |
| Username a| String |  Username used to authenticate against the proxy. If this property is not set then no authentication is used against the proxy, otherwise this value must be specified. |  |
| Password a| String |  Password used to authenticate against the proxy. |  |
| Consumer Key a| String | Consumer key for Salesforce-connected app. |  | *x*
| Key Store a| String | Path to the keystore used to sign data during authentication. |  | *x*
| Store Password a| String | Password of the keystore. |  | *x*
| Principal a| String | Username of the Salesforce user on whose behalf to take action. |  | *x*
| Token Endpoint a| String | URL pointing to the server responsible for providing the authentication token. According to Salesforce, this URL is `+https://login.salesforce.com/services/oauth2/token+`. If implementing for a community, the URL is `+https://acme.force.com/customers/services/oauth2/token+`, where `acme.force.com/customers` is your own community URL. | `+https://login.salesforce.com/services/oauth2/token+` |
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

==== List of Operations

* createDataSet
* deleteDataSet
* startDataProcessing
* unauthorize
* uploadExternalData
* uploadExternalDataIntoNewDataSetAndStartProcessing


== Operations

[[createDataSet]]
=== Create Data Set

`<salesforce-analytics:create-data-set>`

Creates a new dataset in the Salesforce Analytics Cloud system and returns the identifier of the created data set within the Salesforce Analytics Cloud system.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Type a| String |  Represents the type of the dataset to be created |  |x
| Operation a| Enumeration, one of:

** APPEND
** OVERWRITE
** UPSERT
** DELETE |  |  |x
| Description a| String |  |  |x
| Label a| String |  |  |x
| Data Set Name a| String |  |  |x
| Edgemart Container a| String |  |  |
| Notification Sent a| Enumeration, one of:

** ALWAYS
** FAILURES
** NEVER
** WARNINGS |  |  |
| Notification Email a| String |  |  |
| Mode a| Enumeration, one of:

** INCREMENTAL
** NONE | Mode. |  `NONE` |
| Target Variable a| String |  The variable name where to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The outcome of that expression is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%header%autowidth.spread]
|===
| Type a| String
|===

==== For Configurations

* salesforce-analytics

==== Throws

* SALESFORCE-ANALYTICS:CONNECTIVITY
* SALESFORCE-ANALYTICS:ERROR_RESPONSE
* SALESFORCE-ANALYTICS:INVALID_SESSION
* SALESFORCE-ANALYTICS:INVALID_REQUEST_DATA
* SALESFORCE-ANALYTICS:RETRY_EXHAUSTED
* SALESFORCE-ANALYTICS:TRANSACTION
* SALESFORCE-ANALYTICS:UNKNOWN


[[deleteDataSet]]
=== Delete Data Set

`<salesforce-analytics:delete-data-set>`

Deletes the specified dataset from the Salesforce Analytics Cloud system.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | |x
| Data Set Id a| String |  Identifier of dataset to delete |  |x
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors |  |
|===

==== For Configurations

* salesforce-analytics

==== Throws

* SALESFORCE-ANALYTICS:CONNECTIVITY
* SALESFORCE-ANALYTICS:ERROR_RESPONSE
* SALESFORCE-ANALYTICS:INVALID_SESSION
* SALESFORCE-ANALYTICS:INVALID_REQUEST_DATA
* SALESFORCE-ANALYTICS:RETRY_EXHAUSTED
* SALESFORCE-ANALYTICS:TRANSACTION
* SALESFORCE-ANALYTICS:UNKNOWN


[[startDataProcessing]]
=== Start Data Processing

`<salesforce-analytics:start-data-processing>`

Tells the Salesforce Analytics Cloud system to start processing the records uploaded at this point into a dataset.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | |x
| Data Set Id a| String |  Identifier of dataset to be processed |  |x
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors |  |
|===

==== For Configurations

* salesforce-analytics

==== Throws

* SALESFORCE-ANALYTICS:CONNECTIVITY
* SALESFORCE-ANALYTICS:ERROR_RESPONSE
* SALESFORCE-ANALYTICS:INVALID_SESSION
* SALESFORCE-ANALYTICS:INVALID_REQUEST_DATA
* SALESFORCE-ANALYTICS:RETRY_EXHAUSTED
* SALESFORCE-ANALYTICS:TRANSACTION
* SALESFORCE-ANALYTICS:UNKNOWN


[[unauthorize]]
=== Unauthorize

`<salesforce-analytics:unauthorize>`

Deletes all the access token information of a given resource owner ID so that it's impossible to execute any operation for the user without repeating the authorization dance.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | |x
| Resource Owner Id a| String |  The ID of the resource owner for whom to invalidate access |  |
|===

==== For Configurations

* salesforce-analytics


[[uploadExternalData]]
=== Upload External Data

`<salesforce-analytics:upload-external-data>`

Inserts records into a dataset at an ID obtained from the Salesforce Analytics Cloud system.


==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Data Set Id a| String | Identifier of a dataset within the Salesforce Analytics Cloud system. |  |x
| Records a| Array of Object | List of records to insert. |  `#[payload]` |
| Target Variable a| String |  The variable name where to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The outcome of that expression is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%header%autowidth.spread]
|===
| Type a| BulkOperationResult
|===

==== For Configurations

* salesforce-analytics

==== Throws

* SALESFORCE-ANALYTICS:CONNECTIVITY
* SALESFORCE-ANALYTICS:ERROR_RESPONSE
* SALESFORCE-ANALYTICS:INVALID_SESSION
* SALESFORCE-ANALYTICS:INVALID_REQUEST_DATA
* SALESFORCE-ANALYTICS:RETRY_EXHAUSTED
* SALESFORCE-ANALYTICS:TRANSACTION
* SALESFORCE-ANALYTICS:UNKNOWN


[[uploadExternalDataIntoNewDataSetAndStartProcessing]]
=== Upload External Data Into New Dataset And Start Processing

`<salesforce-analytics:upload-external-data-into-new-data-set-and-start-processing>`

Creates a dataset, uploads data into it, and tells the Salesforce Analytics Cloud system to start processing the uploaded data.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Type a| String |  Type of the records to insert. This automatically computes based on metadata extracted from the provided file that contains the configuration element. |  |x
| Records a| Array of Object |  List of records to insert. |  `#[payload]` |
| Operation a| Enumeration, one of:

** APPEND
** DELETE
** OVERWRITE
** UPSERT |  |  |x
| Description a| String |  |  |x
| Label a| String |  |  |x
| Data Set Name a| String |  |  |x
| Edgemart Container a| String |  |  |
| Notification Sent a| Enumeration, one of:

** ALWAYS
** FAILURES
** NEVER
** WARNINGS |  |  |
| Notification Email a| String |  |  |
| Mode a| Enumeration, one of:

** INCREMENTAL
** NONE | Mode. |  `NONE` | 
| Target Variable a| String |  The variable name where to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output. The outcome of that expression is stored in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * reconnect
* reconnect-forever |  A retry strategy in case of connectivity errors. |  |
|===

==== Output

[%header%autowidth.spread]
|===
| Type a| String
|===

==== For Configurations

* salesforce-analytics

==== Throws

* SALESFORCE-ANALYTICS:CONNECTIVITY
* SALESFORCE-ANALYTICS:ERROR_RESPONSE
* SALESFORCE-ANALYTICS:INVALID_SESSION
* SALESFORCE-ANALYTICS:INVALID_REQUEST_DATA
* SALESFORCE-ANALYTICS:RETRY_EXHAUSTED
* SALESFORCE-ANALYTICS:TRANSACTION
* SALESFORCE-ANALYTICS:UNKNOWN


== Types

[[Tls]]
=== Tls

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|======================

[[TrustStore]]
=== Trust Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location  of the trust store, which will be resolved relative to the current classpath and file system, if possible. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|======================

[[KeyStore]]
=== Key Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location  of the trust store, which will be resolved relative to the current classpath and file system, if possible. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the keystore contains many private keys, this attribute indicates the alias of the key to use. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the keystore. |  |
| Algorithm a| String | The algorithm used by the keystore. |  |
|======================

[[standard-revocation-check]]
=== Standard Revocation Check

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|======================

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|======================

[[crl-file]]
=== CRL File

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|======================

[[Reconnection]]
=== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * reconnect
* reconnect-forever | The reconnection strategy to use |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds) | |
| Count a| Number | The number of reconnection attempts to make | |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect | |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance is allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[BulkOperationResult]]
=== Bulk Operation Result

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Id a| Any |  |  |
| Items a| Array of BulkItem |  |  |
| Successful a| Boolean |  |  |
|===

[[BulkItem]]
=== Bulk Item

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Exception a| Any |  |  |
| Id a| Any |  |  |
| Message a| String |  |  |
| Payload a| Object |  |  |
| Status Code a| String |  |  |
| Successful a| Boolean |  |  |
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
